<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="star"
            type="avi.sample.githubstars.ui.star.StarDetailApiResult" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <TextView
            android:id="@+id/public_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_repos"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <TextView
            android:id="@+id/public_gist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_gists"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/public_repo" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/public_gist" />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followers" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{star.data.name}"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/name_label"
            tools:text="torvalds" />

        <TextView
            android:id="@+id/location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{star.data.location}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintTop_toTopOf="@id/location"
            tools:text="Berlin" />

        <TextView
            android:id="@+id/public_repo_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(star.data.publicRepos)}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/public_repo"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/location_name"
            app:layout_constraintTop_toTopOf="@id/public_repo"
            tools:text="92" />

        <TextView
            android:id="@+id/public_gist_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(star.data.publicGists)}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/public_gist"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/public_repo_count"
            app:layout_constraintTop_toTopOf="@id/public_gist"
            tools:text="1234" />

        <TextView
            android:id="@+id/followers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(star.data.followers)}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/followers"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/public_gist_count"
            app:layout_constraintTop_toTopOf="@id/followers"
            tools:text="123" />

        <TextView
            android:id="@+id/following_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Integer.toString(star.data.following)}"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/following"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/followers_count"
            app:layout_constraintTop_toTopOf="@id/following"
            tools:text="321" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.38" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>